--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Indie+Flower&family=Sriracha&display=swap');
 .App {
   text-align: center;
   background-image: "url('./logo.svg')";
